force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/AccountHolderName__c.field-meta.xml
<CustomField>
    <fullName>AccountHolderName__c</fullName>
    <description>Account Holder Name</description>
    <label>Account Holder Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>