force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/FinServ__TransactionSubtype__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TransactionSubtype__c</fullName>
    <label>Transaction Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FinServ__TransactionType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Deposit</fullName>
            </value>
            <value>
                <fullName>On-Us Check Deposit</fullName>
            </value>
            <value>
                <fullName>Transit Check Deposit</fullName>
            </value>
            <value>
                <fullName>Foreign Cash Deposit</fullName>
            </value>
            <value>
                <fullName>Bill Payment</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>ATM Deposit</fullName>
            </value>
            <value>
                <fullName>ATM Withdrawal</fullName>
            </value>
            <value>
                <fullName>POS withdrawal</fullName>
            </value>
            <value>
                <fullName>Misc. Credit</fullName>
            </value>
            <value>
                <fullName>Misc. Debit</fullName>
            </value>
            <value>
                <fullName>Loan Payment</fullName>
            </value>
            <value>
                <fullName>Mortgage Payment</fullName>
            </value>
            <value>
                <fullName>Credit Card Payment</fullName>
            </value>
            <value>
                <fullName>Credit Card Cash Advance</fullName>
            </value>
            <value>
                <fullName>Internal Funds Transfer</fullName>
            </value>
            <value>
                <fullName>Reversal</fullName>
            </value>
            <value>
                <fullName>Interest Earned</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
            <value>
                <fullName>Merchant Charge</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>