force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/FinServ__TransactionType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__TransactionType__c</fullName>
    <description
  >Type of the transaction. This field is used to determine whether the transaction falls under income or expense. Also used in reconciliation logic.</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>