force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/RoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>RoutingNumber__c</fullName>
    <description>Institute Routing Number</description>
    <label>Routing Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>