force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/RunningBalance__c.field-meta.xml
<CustomField>
    <fullName>RunningBalance__c</fullName>
    <label>Running Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>