force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/TransactionAccountType__c.field-meta.xml
<CustomField>
    <fullName>TransactionAccountType__c</fullName>
    <label>Transaction Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinancialProductCategory</valueSetName>
    </valueSet>
</CustomField>