force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/listViews/FinServ__All.listView-meta.xml
<ListView>
    <fullName>FinServ__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>